#4141: use core threads only